fix a spot-bug related issue.